# test-embedded-python

./: CMakeLists.txt  README.md  main.cpp
